--- a/styles/style.css
+++ b/styles/style.css
@@ -490,4 +490,16 @@ ul {
     line-height: 24px;
   }
 }
+
+@media (max-width: 615px) {
+  .achievements__partners {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 /*# sourceMappingURL=style.css.map */
